compiler/kernc_cli/tests/soundness/reject/parser/unclosed_nested_expression_recovers.kn
// source: parser recovery must reject nested broken expressions without hanging or ICEing
// stderr: expected
fn main() i32 {
    return foo(bar([.{ .a = (1 + 2 };
}
